créa fichier services.php

--- a/readme
+++ b/readme
@@ -22,7 +22,7 @@ Techniques choisies :
 Organisation du groupe :
     - Duprez Virgile : Back End / API Facebook  
     - Faucon Matthias : Front End
-    - Flamme Lisa : Secrétaire
+    - Flamme Lisa : Secrétaire / services.php
     - Debut Loîck : API Google
     - Cavarec Léo : API OpenStreet Map
 
