--- a/readme
+++ b/readme
@@ -6,7 +6,7 @@ Composition du groupe :
     - Duprez Virgile
     - Faucon Matthias
     - Flamme Lisa
-    - Debut Loîck
+    - Debut Loîc
     - Cavarec Léo
 
 URL du projet :
