--- a/readme
+++ b/readme
@@ -6,7 +6,7 @@ Composition du groupe :
     - Duprez Virgile
     - Faucon Matthias
     - Flamme Lisa
-    - Debut Loîc
+    - Debut Loïc
     - Cavarec Léo
 
 URL du projet :
@@ -23,7 +23,7 @@ Organisation du groupe :
     - Duprez Virgile : Back End / API Facebook  
     - Faucon Matthias : Front End
     - Flamme Lisa : Secrétaire / services.php
-    - Debut Loîck : API Google
+    - Debut Loïc : API Google
     - Cavarec Léo : API OpenStreet Map
 
 Difficultés rencontrées :
